<resources>
    <string name="app_name">ShopApp</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">forgot password?</string>
    <string name="new_user">New User? </string>
    <string name="here">here</string>
    <string name="sign_up"> Sign Up </string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember Me</string>
    <string name="incorrect_request">Incorrect Request</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="try_again">Try Again</string>
</resources>